--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="col-md-9 col-lg-8">
         <div class="detail-box">
           <h1>
-           KALYAN
+           ARCHU
             <br> JEWELLERS
           </h1>
           <p>
